# hsom-exercises

./: .gitignore  .gitmodules  README.md  hsom-exercises.cabal
src/: Exercises.hs  GenerativeGrammars.hs
src/Chapters/: Ch01.lhs  Ch02.lhs  Ch03.lhs  Ch04.lhs  Ch05.lhs  Ch06.lhs  Ch07.lhs  Ch08.lhs  Ch09.lhs  Ch10.lhs  Ch11.lhs  Ch12.lhs  Ch13.lhs  Ch14.lhs  Ch15.lhs  Ch16.lhs  Ch17.lhs  Ch18.lhs  Ch19.lhs  Ch20.lhs  Ch21.lhs  Ch22.lhs  Ch23.lhs  Ch24.lhs
